--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 /*Navbar*/
@@ -131,6 +132,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 /*container contact*/
