--- a/css/menu.css
+++ b/css/menu.css
@@ -2,13 +2,37 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    margin: 100px 0 100px 0;
+    margin: 0 0 100px 0;
     padding: 0;
 
-    display: flex;
+    display: inline-block;
     justify-content: center;
 
     font-family: 'Merienda One', Helvetica, sans-serif;
+}
+
+.home{
+    width: 100%;
+    height: 10vh;
+
+    background-color: #79390d;
+
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: 0 0 5px 5px #DCDCDC;
+}
+
+.home > p{
+    margin: 0;
+    font-size: 25px;
+}
+
+.home > p > a{
+    text-decoration: none;
+    color: #fff;
 }
 
 .container{
@@ -18,7 +42,9 @@ body{
 
     justify-content: center;
 
-    box-shadow: 2.5px 2.5px 10px 10px #DCDCDC;
+    box-shadow: 0 2.5px 10px 10px #DCDCDC;
+
+    margin-left: 12.5%;
 }
 
 table{
